[gd_scene load_steps=12 format=3 uid="uid://ix8857obwug"]

[ext_resource type="Script" uid="uid://b07q1ndqg14k5" path="res://Scripts/game.gd" id="1_80nbo"]
[ext_resource type="PackedScene" uid="uid://ckqbrkrhn3652" path="res://Scenes/player.tscn" id="2_e2o6t"]
[ext_resource type="PackedScene" uid="uid://bfaiu2d1xd3ow" path="res://Scenes/enemy.tscn" id="2_wowpa"]
[ext_resource type="PackedScene" uid="uid://lcj16w16fjxu" path="res://Scenes/diver_enemy.tscn" id="3_i6g32"]
[ext_resource type="PackedScene" uid="uid://d0hrigt85mrht" path="res://Scenes/extra_enemy.tscn" id="4_1l0tm"]
[ext_resource type="PackedScene" uid="uid://b01vhbqwiqd5u" path="res://hud.tscn" id="5_i6g32"]
[ext_resource type="AudioStream" uid="uid://rrnafgibnnta" path="res://kenney_space-shooter-redux/Bonus/sfx_laser2.ogg" id="5_o5yvi"]
[ext_resource type="PackedScene" uid="uid://cm6bdct7c2uhi" path="res://game_over_screen.tscn" id="6_1l0tm"]
[ext_resource type="AudioStream" uid="uid://timms1c6xyal" path="res://kenney_space-shooter-redux/Bonus/sfx_shieldDown.ogg" id="6_rku1e"]
[ext_resource type="AudioStream" uid="uid://d075h3mjjpckv" path="res://kenney_space-shooter-redux/Bonus/sfx_lose.ogg" id="7_rfjv2"]
[ext_resource type="Texture2D" uid="uid://doxhnd0s7hqrc" path="res://kenney_space-shooter-redux/Backgrounds/purple.png" id="7_v158k"]

[node name="Game" type="Node2D"]
script = ExtResource("1_80nbo")
enemy_scenes = Array[PackedScene]([ExtResource("2_wowpa"), ExtResource("3_i6g32"), ExtResource("4_1l0tm")])

[node name="SFX" type="Node" parent="."]

[node name="LaserSound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_o5yvi")

[node name="HitSound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_rku1e")

[node name="ExplodeSound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("7_rfjv2")

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="UILayer" instance=ExtResource("5_i6g32")]

[node name="GameOverScreen" parent="UILayer" instance=ExtResource("6_1l0tm")]
visible = false

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(0, 960)

[node name="PurpleStars" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
position = Vector2(271, 481)
texture = ExtResource("7_v158k")
region_enabled = true
region_rect = Rect2(0, 0, 540, 960)

[node name="Player" parent="." groups=["player"] instance=ExtResource("2_e2o6t")]
position = Vector2(3, 7)

[node name="EnemySpawnTimer" type="Timer" parent="."]
autostart = true

[node name="LaserContainer" type="Node2D" parent="."]

[node name="EnemyContainer" type="Node2D" parent="."]
position = Vector2(0, 4)

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
